--- a/index.html
+++ b/index.html
@@ -1,29 +1,81 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matematicando</title>
-</head>
-<body>
-	<div align="center">
-		<h1>Em construção! Aguarde... Em breve novidades!</h1>
-		<h2> <a href="https://1drv.ms/u/s!Ai_9NBtmShlLg6d5kJwNwm3l9j9Ppg?e=Kr1cJK" download="setupMatematicando" > Clique aqui e baixe a versão Oficial... </a></h2>
-		<br><h3> <a href="https://1drv.ms/u/s!Ai_9NBtmShlLg6gg0kPyKmU-kvIvFw?e=6X7ntB" download="setupMatematicando" > Clique aqui e baixe a versão Beta... </a></h3>
-		
-		<figure>
-			<img 
-			width="600"
-			height="600"
-			alt="Imagem em construção"
-			src="emconstrucao.jpg">
-			<figcaption>Figura 1 - Imagem em construção </figcaption>
-		</figure>
-
-		<a> Desenvolvido por Dieferson Cruz | Contatos: </a>
-		<a href="tel:+5541999995491"> (41) 99999-5491</a>
-		<a href="mailto:dieferson.cruz@outlook.com"> dieferson.cruz@outlook.com</a>
-	</div>
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title >Matematicando</title>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="shortcut icon" href="imagens/geometry.ico" type="image/x-icon">
+		<script type="text/javascript" src="scripts/utils.js" > </script>
+		<script type="text/javascript" src="scripts/calc.js" > </script>
+		<script type="text/javascript" src="scripts/cronometro.js" > </script>
+	</head>
+	<body>
+		<header class="header">
+			<h1 class="tituloPrincipal">Matematicando</h1>
+		</header>
+		<main class="main">
+			<div id="divPrincipal" >
+				<div id="divPainelEsquerdo">
+					<div id="divAcertosErros">
+						<div id="divAcertos">
+							<label id="labelAcertos" class="labels">Acertos: </label>
+							<input type="text" id="inputAcertos" class="inputsAcertosErros" value="0" readonly>
+						</div>
+						<div id="divErros">
+							<label id="labelErros" class="labels">Erros: </label>
+							<input type="text" id="inputErros" class="inputsAcertosErros" value="0" readonly>
+						</div>
+						<div id="divCronometro">
+							<label id="labelCronometro" class="labels">
+								<span id="minuto">00</span> : 
+								<span id="segundo">00</span>
+							 </label>
+						</div>
+					</div>
+					<div id="divRodadas">
+					</div>
+				</div>
+				<div id="divPainelDireito">
+					<div id="divFatores" class="divs">
+						<input type="text" id="inputFator1" class="inputFatores inputs" value="0" readonly>
+						<input type="text" id="inputOperador" class="inputs" value="X" readonly>
+						<input type="text" id="inputFator2" class="inputFatores inputs" value="0" readonly>
+					</div>
+					<div id="divResultado" class="divs">
+						<input type="number" id="inputResultado" class="inputs" value="" >
+					</div>
+					<div id="divAcoes" class="divs">
+						<button id="btnIniciarJogo" class="btnAcoes" onclick="iniciarCronometro(5);" > Iniciar Jogo</button>
+						<button id="btnPararJogo" class="btnAcoes" onclick="pararCronometro();"> Parar Jogo</button>
+					</div>
+				</div>
+			</div>
+			<div class="footer"> 
+				<a class="rodape-contato"> Desenvolvido por Dieferson Cruz | Contatos: </a>
+				<a class="rodape-contato" href="tel:+5541999995491"> (41) 99999-5491</a>
+				<a class="rodape-contato" href="mailto:dieferson.cruz@outlook.com"> dieferson.cruz@outlook.com</a>
+			</div>
+		</main>
 	</body>
+	<script>
+		document.querySelector('body').addEventListener('keydown', function (event) {
+			var tecla = event.keyCode;
+			if (tecla == 13) {
+				// tecla ENTER
+				GeradorGameMatematica();
+			} else if (tecla == 27) {
+				// tecla ESC
+			} else if (tecla == 37) {
+				// seta pra ESQUERDA
+			} else if (tecla == 38) {
+				// seta pra CIMA
+			} else if (tecla == 39) {
+				// seta pra DIREITA
+			} else if (tecla == 40) {
+				// seta pra BAIXO
+			}
+		});
+	</script>
 </html>
