--- a/public/index.html
+++ b/public/index.html
@@ -1,89 +1,121 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
-
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/9.10.0/firebase-app-compat.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/9.10.0/firebase-auth-compat.js"></script>
-    <script defer src="/__/firebase/9.10.0/firebase-database-compat.js"></script>
-    <script defer src="/__/firebase/9.10.0/firebase-firestore-compat.js"></script>
-    <script defer src="/__/firebase/9.10.0/firebase-functions-compat.js"></script>
-    <script defer src="/__/firebase/9.10.0/firebase-messaging-compat.js"></script>
-    <script defer src="/__/firebase/9.10.0/firebase-storage-compat.js"></script>
-    <script defer src="/__/firebase/9.10.0/firebase-analytics-compat.js"></script>
-    <script defer src="/__/firebase/9.10.0/firebase-remote-config-compat.js"></script>
-    <script defer src="/__/firebase/9.10.0/firebase-performance-compat.js"></script>
-    <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
-
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
-      }
-    </style>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Matematicando</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="shortcut icon" href="imagens/geometry.ico" type="image/x-icon" />
   </head>
   <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
-    </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
-
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const loadEl = document.querySelector('#load');
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.firestore().doc('/foo/bar').get().then(() => { });
-        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        // firebase.analytics(); // call to activate
-        // firebase.analytics().logEvent('tutorial_completed');
-        // firebase.performance(); // call to activate
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-
-        try {
-          let app = firebase.app();
-          let features = [
-            'auth', 
-            'database', 
-            'firestore',
-            'functions',
-            'messaging', 
-            'storage', 
-            'analytics', 
-            'remoteConfig',
-            'performance',
-          ].filter(feature => typeof app[feature] === 'function');
-          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
+    <header class="header">
+      <h1 class="tituloPrincipal">Matematicando</h1>
+    </header>
+    <main class="main">
+      <div id="divPrincipal">
+        <div id="divPainelEsquerdo">
+          <div id="divAcertosErros">
+            <div id="divAcertos">
+              <label id="labelAcertos" class="labels">Acertos: </label>
+              <input
+                type="text"
+                id="inputAcertos"
+                class="inputsAcertosErros"
+                value="0"
+                readonly
+              />
+            </div>
+            <div id="divErros">
+              <label id="labelErros" class="labels">Erros: </label>
+              <input
+                type="text"
+                id="inputErros"
+                class="inputsAcertosErros"
+                value="0"
+                readonly
+              />
+            </div>
+            <div id="divCronometro">
+              <label id="labelCronometro" class="labels">
+                <span id="minuto">00</span> :
+                <span id="segundo">00</span>
+              </label>
+            </div>
+          </div>
+          <div id="divRodadas"></div>
+        </div>
+        <div id="divPainelDireito">
+          <div id="divFatores" class="divs">
+            <input
+              type="number"
+              id="inputFator1"
+              class="inputFatores inputs"
+              value="0"
+              readonly
+            />
+            <input
+              type="text"
+              id="inputOperador"
+              class="inputs"
+              value="X"
+              readonly
+            />
+            <input
+              type="number"
+              id="inputFator2"
+              class="inputFatores inputs"
+              value="0"
+              readonly
+            />
+          </div>
+          <div id="divResultado" class="divs">
+            <input type="number" id="inputResultado" class="inputs" value="" />
+          </div>
+          <div id="divAcoes" class="divs">
+            <button
+              id="btnIniciarPararJogo"
+              class="btnAcoes btnIniciarJogo"
+              onclick="iniciarJogo()"
+            >
+              Iniciar Jogo
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="footer">
+        <a class="rodape-contato">
+          Desenvolvido por Dieferson Cruz | Contatos:
+        </a>
+        <a class="rodape-contato" href="tel:+5541999995491"> (41) 99999-5491</a>
+        <a class="rodape-contato" href="mailto:dieferson.cruz@outlook.com">
+          dieferson.cruz@outlook.com</a
+        >
+      </div>
+    </main>
+  </body>
+  <script>
+    document
+      .querySelector("body")
+      .addEventListener("keydown", function (event) {
+        var tecla = event.keyCode;
+        if (tecla == 13) {
+          // tecla ENTER
+          geradorGameMatematica();
+        } else if (tecla == 27) {
+          // tecla ESC
+        } else if (tecla == 37) {
+          // seta pra ESQUERDA
+        } else if (tecla == 38) {
+          // seta pra CIMA
+        } else if (tecla == 39) {
+          // seta pra DIREITA
+        } else if (tecla == 40) {
+          // seta pra BAIXO
         }
       });
-    </script>
-  </body>
+  </script>
+  <script type="text/javascript" src="scripts/utils.js"></script>
+  <script type="text/javascript" src="scripts/calc.js"></script>
+  <script type="text/javascript" src="scripts/main.js"></script>
 </html>
