--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,11 @@
               </label>
             </div>
           </div>
-          <div id="divRodadas"></div>
+          <div id="divRodadas">
+            <fieldset class="fieldRodadas">
+              <legend>Rodadas</legend>
+            </fieldset>
+          </div>
         </div>
         <div id="divPainelDireito" class="painel">
           <div id="divFatores" class="divs">
@@ -171,4 +175,5 @@
   </body>
   <script type="module" src="./scripts/main.js"></script>
   <script src="./scripts/modal.js"></script>
+  <script type="module" src="./service/connectionBD.js"></script>
 </html>
