--- a/public/home/index.html
+++ b/public/home/index.html
@@ -28,8 +28,8 @@
 <body>
     <h1>Em construção</h1>
     <p>Esta página está em construção. Aguarde.</p>
-    <p>Para acessar o matematicando <a href="http://diefersoncruz.cloud/matematicando">clique aqui...</a></p>
-    <img src="./images/construction.jpeg" alt="Em construção">
+    <p>Para acessar o matematicando <a href="./matematicando">clique aqui...</a></p>
+    <img src="images/construction.jpeg" alt="Em construção">
 </body>
 
 </html>
