--- a/public/home/index.html
+++ b/public/home/index.html
@@ -1,26 +1,67 @@
 <!doctype html>
-<html>
+<html lang="pt-BR">
 
 <head>
-    <meta charset="utf-8">
-    <title>Em construção</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.75" />
+    <title>Dieferson Cruz</title>
     <style>
         body {
             background-color: #f2f2f2;
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
             text-align: center;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
 
         h1 {
             color: #333;
             font-size: 48px;
-            margin-top: 100px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
         }
 
         p {
             color: #666;
             font-size: 24px;
+            margin-top: 20px;
+        }
+
+        a {
+            color: #0088cc;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        a:hover {
+            color: #005999;
+        }
+
+        img {
+            width: 50%;
+            height: auto;
             margin-top: 50px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        #linkedin-profile {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            padding: 20px;
+            margin-top: 20px;
+            width: 80%;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            transition: box-shadow 0.3s ease;
+        }
+
+        #linkedin-profile:hover {
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
@@ -30,6 +71,10 @@
     <p>Esta página está em construção. Aguarde.</p>
     <p>Para acessar o matematicando <a href="./matematicando">clique aqui...</a></p>
     <img src="images/construction.jpeg" alt="Em construção">
+    <div id="linkedin-profile">
+        <h2>Meu Perfil do LinkedIn</h2>
+        <p>Visite meu perfil no <a href="https://br.linkedin.com/in/diefersoncruz">LinkedIn</a></p>
+    </div>
 </body>
 
 </html>
