--- a/public/matematicando/index.html
+++ b/public/matematicando/index.html
@@ -1,179 +1,129 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=0.75" />
-    <title>Matematicando</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" type="text/css" href="css/modal.css" />
-    <link rel="shortcut icon" href="imagens/geometry.ico" type="image/x-icon" />
-  </head>
-  <body>
-    <header class="header">
-      <h1 class="tituloPrincipal">Matematicando</h1>
-    </header>
-    <main class="painel">
-      <div id="divPrincipal">
-        <div id="divPainelEsquerdo" class="painel">
-          <div id="divAcertosErros">
-            <div id="divAcertos">
-              <label id="labelAcertos" class="labels">Acertos: </label>
-              <input
-                type="text"
-                id="inputAcertos"
-                class="inputsAcertosErros"
-                value="0"
-                readonly
-              />
-            </div>
-            <div id="divErros">
-              <label id="labelErros" class="labels" for="inputErros"
-                >Erros:
-              </label>
-              <input
-                type="text"
-                id="inputErros"
-                class="inputsAcertosErros"
-                value="0"
-                readonly
-              />
-            </div>
-            <div id="divCronometro">
-              <label id="labelCronometro">
-                <span id="minuto">00</span> :
-                <span id="segundo">00</span>
-              </label>
-            </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=0.75" />
+  <title>Matematicando</title>
+  <link rel="stylesheet" type="text/css" href="matematicando/css/style.css" />
+  <link rel="stylesheet" type="text/css" href="matematicando/css/modal.css" />
+  <link rel="shortcut icon" href="matematicando/imagens/geometry.ico" type="image/x-icon" />
+</head>
+
+<body>
+  <header class="header">
+    <h1 class="tituloPrincipal">Matematicando</h1>
+  </header>
+  <main class="painel">
+    <div id="divPrincipal">
+      <div id="divPainelEsquerdo" class="painel">
+        <div id="divAcertosErros">
+          <div id="divAcertos">
+            <label id="labelAcertos" class="labels">Acertos: </label>
+            <input type="text" id="inputAcertos" class="inputsAcertosErros" value="0" readonly />
           </div>
-          <div id="divRodadas">
-            <fieldset class="fieldRodadas">
-              <legend>Rodadas</legend>
+          <div id="divErros">
+            <label id="labelErros" class="labels" for="inputErros">Erros:
+            </label>
+            <input type="text" id="inputErros" class="inputsAcertosErros" value="0" readonly />
+          </div>
+          <div id="divCronometro">
+            <label id="labelCronometro">
+              <span id="minuto">00</span> :
+              <span id="segundo">00</span>
+            </label>
+          </div>
+        </div>
+        <div id="divRodadas">
+          <fieldset class="fieldRodadas">
+            <legend>Rodadas</legend>
+          </fieldset>
+        </div>
+      </div>
+      <div id="divPainelDireito" class="painel">
+        <div id="divFatores" class="divs">
+          <input type="number" id="inputFator1" class="inputFatores inputs" value="0" readonly disabled />
+          <input type="text" id="inputOperador" class="inputs" value="X" readonly />
+          <input type="number" id="inputFator2" class="inputFatores inputs" value="0" readonly disabled />
+        </div>
+        <div id="divResultado" class="divs">
+          <input type="number" id="inputResultado" class="inputs" value="" disabled />
+        </div>
+        <div id="divAcoes" class="divs">
+          <button id="btnIniciarPararJogo" class="btnAcoes btnIniciarJogo">
+            Iniciar Jogo
+          </button>
+          <button id="btnConfiguracoes" onclick="openModal('dv-modal')"></button>
+        </div>
+      </div>
+    </div>
+    <div id="dv-modal" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1>Configurações</h1>
+        </div>
+
+        <div class="modal-body">
+          <form action="" id="formConfiguracoes">
+            <label for="tempoLimite"> Tempo Limite (segundos):</label>
+            <input type="number" name="tempoLimite" value="60" />
+            <br />
+            <a> (Fator A) Permitir valores entre </a>
+            <input type="number" name="limiteNegativoFatorA" value="0" />
+            <a> e</a>
+            <input type="number" name="limiteFatorA" value="10" />
+            <br />
+            <a> (Fator B) Permitir valores entre </a>
+            <input type="number" name="limiteNegativoFatorB" value="0" />
+            <a> e</a>
+            <input type="number" name="limiteFatorB" value="10" />
+            <br />
+            <br />
+            <fieldset>
+              <legend>Operações matemáticas permitidas</legend>
+              <div>
+                <input type="checkbox" id="adicao" name="adicao" checked />
+                <label for="adicao">Adição</label>
+              </div>
+              <div>
+                <input type="checkbox" id="subtracao" name="subtracao" checked />
+                <label for="subtracao">Subtração</label>
+              </div>
+              <div>
+                <input type="checkbox" id="multiplicacao" name="multiplicacao" checked />
+                <label for="multiplicacao">Multiplicação</label>
+              </div>
+              <div>
+                <input type="checkbox" id="divisao" name="divisao" checked />
+                <label for="divisao">Divisão</label>
+              </div>
             </fieldset>
-          </div>
+          </form>
         </div>
-        <div id="divPainelDireito" class="painel">
-          <div id="divFatores" class="divs">
-            <input
-              type="number"
-              id="inputFator1"
-              class="inputFatores inputs"
-              value="0"
-              readonly
-              disabled
-            />
-            <input
-              type="text"
-              id="inputOperador"
-              class="inputs"
-              value="X"
-              readonly
-            />
-            <input
-              type="number"
-              id="inputFator2"
-              class="inputFatores inputs"
-              value="0"
-              readonly
-              disabled
-            />
-          </div>
-          <div id="divResultado" class="divs">
-            <input
-              type="number"
-              id="inputResultado"
-              class="inputs"
-              value=""
-              disabled
-            />
-          </div>
-          <div id="divAcoes" class="divs">
-            <button id="btnIniciarPararJogo" class="btnAcoes btnIniciarJogo">
-              Iniciar Jogo
-            </button>
-            <button
-              id="btnConfiguracoes"
-              onclick="openModal('dv-modal')"
-            ></button>
-          </div>
-        </div>
-      </div>
-      <div id="dv-modal" class="modal">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1>Configurações</h1>
-          </div>
 
-          <div class="modal-body">
-            <form action="" id="formConfiguracoes">
-              <label for="tempoLimite"> Tempo Limite (segundos):</label>
-              <input type="number" name="tempoLimite" value="60" />
-              <br />
-              <a> (Fator A) Permitir valores entre </a>
-              <input type="number" name="limiteNegativoFatorA" value="0" />
-              <a> e</a>
-              <input type="number" name="limiteFatorA" value="10" />
-              <br />
-              <a> (Fator B) Permitir valores entre </a>
-              <input type="number" name="limiteNegativoFatorB" value="0" />
-              <a> e</a>
-              <input type="number" name="limiteFatorB" value="10" />
-              <br />
-              <br />
-              <fieldset>
-                <legend>Operações matemáticas permitidas</legend>
-                <div>
-                  <input type="checkbox" id="adicao" name="adicao" checked />
-                  <label for="adicao">Adição</label>
-                </div>
-                <div>
-                  <input
-                    type="checkbox"
-                    id="subtracao"
-                    name="subtracao"
-                    checked
-                  />
-                  <label for="subtracao">Subtração</label>
-                </div>
-                <div>
-                  <input
-                    type="checkbox"
-                    id="multiplicacao"
-                    name="multiplicacao"
-                    checked
-                  />
-                  <label for="multiplicacao">Multiplicação</label>
-                </div>
-                <div>
-                  <input type="checkbox" id="divisao" name="divisao" checked />
-                  <label for="divisao">Divisão</label>
-                </div>
-              </fieldset>
-            </form>
-          </div>
-
-          <div class="modal-footer">
-            <button class="btn btnFechar" onclick="closeModal('dv-modal')">
-              Fechar
-            </button>
-            <button class="btn btnSalvar" id="btnSalvarModal">Salvar</button>
-          </div>
+        <div class="modal-footer">
+          <button class="btn btnFechar" onclick="closeModal('dv-modal')">
+            Fechar
+          </button>
+          <button class="btn btnSalvar" id="btnSalvarModal">Salvar</button>
         </div>
       </div>
-    </main>
-    <footer>
-      <div class="footer">
-        <a class="rodape-contato">
-          Desenvolvido por Dieferson Cruz | Contatos:
-        </a>
-        <a class="rodape-contato" href="tel:+5541999995491"> (41) 99999-5491</a>
-        <a class="rodape-contato" href="mailto:dieferson.cruz@outlook.com">
-          dieferson.cruz@outlook.com</a
-        >
-      </div>
-    </footer>
-  </body>
-  <script type="module" src="./scripts/main.js"></script>
-  <script src="./scripts/modal.js"></script>
-  <script type="module" src="./service/connectionBD.js"></script>
+    </div>
+  </main>
+  <footer>
+    <div class="footer">
+      <a class="rodape-contato">
+        Desenvolvido por Dieferson Cruz | Contatos:
+      </a>
+      <a class="rodape-contato" href="tel:+5541999995491"> (41) 99999-5491</a>
+      <a class="rodape-contato" href="mailto:dieferson.cruz@outlook.com">
+        dieferson.cruz@outlook.com</a>
+    </div>
+  </footer>
+</body>
+<script type="module" src="matematicando/scripts/main.js"></script>
+<script src="matematicando/scripts/modal.js"></script>
+<script type="module" src="matematicando/service/connectionBD.js"></script>
+
 </html>
