--- a/public/matematicando/index.html
+++ b/public/matematicando/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=0.75" />
+  <meta name="viewport" content="width=device-width" />
   <title>Matematicando</title>
   <link rel="stylesheet" type="text/css" href="matematicando/css/style.css" />
   <link rel="stylesheet" type="text/css" href="matematicando/css/modal.css" />
@@ -18,28 +18,25 @@
   <main class="painel">
     <div id="divPrincipal">
       <div id="divPainelEsquerdo" class="painel">
-        <div id="divAcertosErros">
-          <div id="divAcertos">
-            <label id="labelAcertos" class="labels">Acertos: </label>
-            <input type="text" id="inputAcertos" class="inputsAcertosErros" value="0" readonly />
-          </div>
-          <div id="divErros">
-            <label id="labelErros" class="labels" for="inputErros">Erros:
-            </label>
-            <input type="text" id="inputErros" class="inputsAcertosErros" value="0" readonly />
-          </div>
-          <div id="divCronometro">
-            <label id="labelCronometro">
-              <span id="minuto">00</span> :
-              <span id="segundo">00</span>
-            </label>
-          </div>
+        <label id="labelCronometro">
+          <span id="minuto">00</span> :
+          <span id="segundo">00</span>
+        </label>
+        <div id="divAcertos">
+          <label id="labelAcertos" class="labels">Acertos: </label>
+          <input type="text" id="inputAcertos" class="inputsAcertosErros" value="0" readonly />
+        </div>
+        <div id="divErros">
+          <label id="labelErros" class="labels" for="inputErros">Erros:
+          </label>
+          <input type="text" id="inputErros" class="inputsAcertosErros" value="0" readonly />
         </div>
         <div id="divRodadas">
           <fieldset class="fieldRodadas">
             <legend>Rodadas</legend>
           </fieldset>
         </div>
+
       </div>
       <div id="divPainelDireito" class="painel">
         <div id="divFatores" class="divs">
