--- a/public/matematicando/index.html
+++ b/public/matematicando/index.html
@@ -50,6 +50,7 @@
       </div>
       <div class="divResultado" style="text-align: center;">
         <button id="btn-responder" style="display: inline-block; margin: 0 auto;"> Responder </button>
+        <p>Ou pressione [Enter] para Responder.</p>
       </div>
     </div>
     <div id="dv-modal" class="modal">
