Removido arquivo não utilizado. Ajuste padrão de cores. Setado foco ao iniciar jogo.

--- a/public/matematicando/index.html
+++ b/public/matematicando/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header class="header">
-    <h1 class="tituloPrincipal">Matematicando</h1>
+    <h1>Matematicando</h1>
   </header>
   <main class="painel">
     <div id="divPrincipal">
@@ -109,7 +109,7 @@
   <footer>
     <div class="footer">
       <a class="rodape-contato"> Desenvolvido por Dieferson Cruz | Contatos: </a>
-      <a class="rodape-contato" href="tel:+5541999995491"> (41) 99999-5491</a>
+      <a class="rodape-contato" href="tel:+5541999995491"> (41) 99999-5491 - </a>
       <a class="rodape-contato" href="mailto:dieferson.cruz@outlook.com"> dieferson.cruz@outlook.com</a>
     </div>
   </footer>
