--- a/public/matematicando/index.html
+++ b/public/matematicando/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" type="text/css" href="matematicando/css/style.css" />
   <link rel="stylesheet" type="text/css" href="matematicando/css/modal.css" />
   <link rel="shortcut icon" href="matematicando/imagens/geometry.ico" type="image/x-icon" />
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </head>
 
 <body>
@@ -92,6 +94,13 @@
               <div>
                 <input type="checkbox" id="divisao" name="divisao" checked />
                 <label for="divisao">Divisão</label>
+              </div>
+            </fieldset>
+            <fieldset>
+              <legend>Configurações de exibição</legend>
+              <div>
+                <input type="checkbox" id="exibirRespostaCerta" name="exibirRespostaCerta" unchecked />
+                <label for="exibirRespostaCerta">Exibir respostas</label>
               </div>
             </fieldset>
           </form>
